...
    
    @IBAction func likeButtonClicked(_ sender: Any) {
        delegate?.imageListCellDidTapLike(self)
    }
    
    func setIsLiked(_ isLiked : Bool){
        let likeImage = isLiked ? UIImage(named: "Active") : UIImage(named: "NoActive")
        likeButton.setImage(likeImage, for: .normal)
    }
    private func setupGradient() {
        cellImage.addSubview(gradientView)
        // Убедимся, что дата отображается поверх градиента
        cellImage.bringSubviewToFront(dateLabel)
...
