...
    
    
    //MARK: Lifecycles
    override func viewDidLoad() {
        super.viewDidLoad()
        configureBackButton()
        loginButton.accessibilityIdentifier = "Authenticate"
    }
    
    private func configureBackButton() {
        navigationController?.navigationBar.backIndicatorTransitionMaskImage = UIImage(resource: .navBackButton)
        navigationItem.backBarButtonItem = UIBarButtonItem(title: "", style: .plain, target: nil, action: nil) // 3
        navigationItem.backBarButtonItem?.tintColor = UIColor(resource: .ypBlack)
...
