...
    private var estimatedProgressObservation: NSKeyValueObservation?
    weak var delegate: WebViewViewControllerDelegate?
    var presenter : WebViewPresenterProtocol?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.accessibilityIdentifier = "UnsplashWebView" 
        presenter?.viewDidLoad()
        webView.navigationDelegate = self
        progressView.progress = 0
        estimatedProgressObservation = webView.observe(
                    \.estimatedProgress,
                    options: [],
...
